Fix: made sub menu overflow hidden to prevent inner items to overlap

--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -192,6 +192,7 @@ $admin-bar-height-medium: 46px;
 	}
 	.sub-menu {
 		background-color: lighten($theme-color, 10%);
+		overflow: hidden;
 		position: absolute;
 			top: 100%;
 			left: 0;
